modified param and documentation
