# docs/swagger.json
@@ -24,7 +24,7 @@
     "paths": {
         "/estadisticas/anio": {
             "get": {
-                "description": "Retorna las estadísticas calculadas por año para las colmenas y sensores especificados",
+                "description": "Retorna las estadísticas calculadas por año para los sensores y Raspberry Pi especificados",
                 "consumes": [
                     "application/json"
                 ],
@@ -45,11 +45,11 @@
                         "in": "query"
                     },
                     {
-                        "minimum": 1,
-                        "type": "integer",
-                        "example": 1,
-                        "description": "ID de la colmena para filtrar las estadísticas",
-                        "name": "colmena_id",
+                        "maxLength": 17,
+                        "type": "string",
+                        "example": "\"b8:27:eb:12:34:56\"",
+                        "description": "MAC del Raspberry Pi para filtrar las estadísticas",
+                        "name": "mac_raspberry",
                         "in": "query"
                     }
                 ],
@@ -92,7 +92,7 @@
         },
         "/estadisticas/dia": {
             "get": {
-                "description": "Retorna las estadísticas calculadas por día para las colmenas y sensores especificados",
+                "description": "Retorna las estadísticas calculadas por día para los sensores y Raspberry Pi especificados",
                 "consumes": [
                     "application/json"
                 ],
@@ -113,11 +113,10 @@
                         "in": "query"
                     },
                     {
-                        "minimum": 1,
-                        "type": "integer",
-                        "example": 1,
-                        "description": "ID de la colmena para filtrar las estadísticas",
-                        "name": "colmena_id",
+                        "maxLength": 17,
+                        "type": "string",
+                        "description": "MAC del Raspberry Pi para filtrar las estadísticas",
+                        "name": "mac_raspberry",
                         "in": "query"
                     }
                 ],
@@ -160,7 +159,7 @@
         },
         "/estadisticas/mes": {
             "get": {
-                "description": "Retorna las estadísticas calculadas por mes para las colmenas y sensores especificados",
+                "description": "Retorna las estadísticas calculadas por mes para los sensores y Raspberry Pi especificados",
                 "consumes": [
                     "application/json"
                 ],
@@ -181,11 +180,11 @@
                         "in": "query"
                     },
                     {
-                        "minimum": 1,
-                        "type": "integer",
-                        "example": 1,
-                        "description": "ID de la colmena para filtrar las estadísticas",
-                        "name": "colmena_id",
+                        "maxLength": 17,
+                        "type": "string",
+                        "example": "\"b8:27:eb:12:34:56\"",
+                        "description": "MAC del Raspberry Pi para filtrar las estadísticas",
+                        "name": "mac_raspberry",
                         "in": "query"
                     }
                 ],
@@ -228,7 +227,7 @@
         },
         "/estadisticas/semana": {
             "get": {
-                "description": "Retorna las estadísticas calculadas por semana para las colmenas y sensores especificados",
+                "description": "Retorna las estadísticas calculadas por semana para los sensores y Raspberry Pi especificados",
                 "consumes": [
                     "application/json"
                 ],
@@ -249,11 +248,11 @@
                         "in": "query"
                     },
                     {
-                        "minimum": 1,
-                        "type": "integer",
-                        "example": 1,
-                        "description": "ID de la colmena para filtrar las estadísticas",
-                        "name": "colmena_id",
+                        "maxLength": 17,
+                        "type": "string",
+                        "example": "\"b8:27:eb:12:34:56\"",
+                        "description": "MAC del Raspberry Pi para filtrar las estadísticas",
+                        "name": "mac_raspberry",
                         "in": "query"
                     }
                 ],
@@ -317,12 +316,11 @@
                 "id": {
                     "type": "integer"
                 },
-                "id_colmena": {
-                    "description": "CAMPO AÑADIDO",
-                    "type": "integer"
-                },
                 "id_sensor": {
                     "type": "integer"
+                },
+                "mac_raspberry": {
+                    "type": "string"
                 },
                 "valor_maximo": {
                     "type": "number"
@@ -350,12 +348,11 @@
                 "id": {
                     "type": "integer"
                 },
-                "id_colmena": {
-                    "description": "CAMPO AÑADIDO",
-                    "type": "integer"
-                },
                 "id_sensor": {
                     "type": "integer"
+                },
+                "mac_raspberry": {
+                    "type": "string"
                 },
                 "valor_maximo": {
                     "type": "number"
@@ -389,12 +386,11 @@
                 "id": {
                     "type": "integer"
                 },
-                "id_colmena": {
-                    "description": "CAMPO AÑADIDO",
-                    "type": "integer"
-                },
                 "id_sensor": {
                     "type": "integer"
+                },
+                "mac_raspberry": {
+                    "type": "string"
                 },
                 "valor_maximo": {
                     "type": "number"
@@ -428,12 +424,11 @@
                 "id": {
                     "type": "integer"
                 },
-                "id_colmena": {
-                    "description": "CAMPO AÑADIDO",
-                    "type": "integer"
-                },
                 "id_sensor": {
                     "type": "integer"
+                },
+                "mac_raspberry": {
+                    "type": "string"
                 },
                 "valor_maximo": {
                     "type": "number"
